WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171687
[WK2] Image action sheets sometimes do not dismiss when beginning data interaction
https://bugs.webkit.org/show_bug.cgi?id=171687
Summary
[WK2] Image action sheets sometimes do not dismiss when beginning data intera...
Wenson Hsieh
Reported
2017-05-04 13:01:40 PDT
<
rdar://problem/31996534
>
Attachments
Patch
(2.99 KB, patch)
2017-05-04 13:36 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-05-04 13:36:09 PDT
Created
attachment 309097
[details]
Patch
WebKit Commit Bot
Comment 2
2017-05-04 15:35:36 PDT
Comment on
attachment 309097
[details]
Patch Clearing flags on attachment: 309097 Committed
r216213
: <
http://trac.webkit.org/changeset/216213
>
WebKit Commit Bot
Comment 3
2017-05-04 15:35:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug